updated src.traditional_methods with tested optimization code

--- a/notebooks/orf_detection_optimized.ipynb
+++ b/notebooks/orf_detection_optimized.ipynb
@@ -23,6 +23,244 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44e10fe8",
+   "metadata": {},
+   "source": [
+    "# ORIGINAL CODE FROM VERSION 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54560b65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def find_purine_rich_regions(\n",
+    "    sequence: str, \n",
+    "    min_length: int = 4, \n",
+    "    min_purine_content: float = 0.6\n",
+    ") -> List[Dict]:\n",
+    "    \"\"\"Find purine-rich regions (A and G rich) in sequence.\"\"\"\n",
+    "    purine_regions = []\n",
+    "    \n",
+    "    for start in range(len(sequence)):\n",
+    "        for length in range(min_length, min(9, len(sequence) - start + 1)):\n",
+    "            subseq = sequence[start:start + length]\n",
+    "            \n",
+    "            purines = subseq.count('A') + subseq.count('G')\n",
+    "            purine_fraction = purines / length\n",
+    "            \n",
+    "            if purine_fraction >= min_purine_content:\n",
+    "                purine_regions.append({\n",
+    "                    'sequence': subseq,\n",
+    "                    'start': start,\n",
+    "                    'end': start + length,\n",
+    "                    'purine_content': purine_fraction,\n",
+    "                    'length': length\n",
+    "                })\n",
+    "    \n",
+    "    return purine_regions\n",
+    "\n",
+    "\n",
+    "def evaluate_spacing_score(spacing: int) -> float:\n",
+    "    \"\"\"Evaluate spacing between RBS and start codon (optimal: 6-10 nt).\"\"\"\n",
+    "    if 6 <= spacing <= 8:\n",
+    "        return 3.0  # Optimal\n",
+    "    elif 5 <= spacing <= 10:\n",
+    "        return 2.5  # Very good\n",
+    "    elif 4 <= spacing <= 12:\n",
+    "        return 1.5  # Good\n",
+    "    elif 3 <= spacing <= 14:\n",
+    "        return 1.0  # Acceptable\n",
+    "    else:\n",
+    "        return 0.2  # Poor\n",
+    "\n",
+    "\n",
+    "def score_motif_similarity(sequence: str) -> Tuple[float, str]:\n",
+    "    \"\"\"Score sequence similarity to known RBS motifs.\"\"\"\n",
+    "    best_score = 0.0\n",
+    "    best_motif = None\n",
+    "    \n",
+    "    for motif in KNOWN_RBS_MOTIFS:\n",
+    "        for offset in range(max(len(sequence), len(motif))):\n",
+    "            matches = 0\n",
+    "            total_positions = 0\n",
+    "            \n",
+    "            for i in range(len(sequence)):\n",
+    "                motif_pos = i + offset\n",
+    "                if 0 <= motif_pos < len(motif):\n",
+    "                    total_positions += 1\n",
+    "                    if sequence[i] == motif[motif_pos]:\n",
+    "                        matches += 1\n",
+    "            \n",
+    "            if total_positions > 0:\n",
+    "                similarity = matches / total_positions\n",
+    "                \n",
+    "                overlap_length = total_positions\n",
+    "                motif_weight = len(motif) / 6.0  # AGGAGG gets weight 1.0\n",
+    "                \n",
+    "                score = similarity * overlap_length * motif_weight\n",
+    "                \n",
+    "                if score > best_score:\n",
+    "                    best_score = score\n",
+    "                    best_motif = motif\n",
+    "    \n",
+    "    return best_score, best_motif\n",
+    "\n",
+    "\n",
+    "def predict_rbs_simple(sequence: str, orf: Dict, upstream_length: int = 20) -> Dict:\n",
+    "    \"\"\"Predict RBS using purine content, spacing, and motif similarity.\"\"\"\n",
+    "    start_pos = orf['start']\n",
+    "    \n",
+    "    if start_pos < upstream_length:\n",
+    "        return {\n",
+    "            'rbs_score': -5.0,\n",
+    "            'spacing_score': 0.0,\n",
+    "            'motif_score': 0.0,\n",
+    "            'best_sequence': None,\n",
+    "            'best_motif': None,\n",
+    "            'spacing': 0,\n",
+    "            'position': 0\n",
+    "        }\n",
+    "\n",
+    "    upstream_start = start_pos - upstream_length\n",
+    "    upstream_seq = sequence[upstream_start:start_pos]\n",
+    "    \n",
+    "    purine_regions = find_purine_rich_regions(upstream_seq, min_length=4, min_purine_content=0.6)\n",
+    "    \n",
+    "    best_score = -5.0\n",
+    "    best_prediction = None\n",
+    "    \n",
+    "    for region in purine_regions:\n",
+    "        sd_candidate = region['sequence']\n",
+    "        spacing = len(upstream_seq) - region['end']\n",
+    "        \n",
+    "        if spacing < 4 or spacing > 12:\n",
+    "            continue\n",
+    "        \n",
+    "        spacing_score = evaluate_spacing_score(spacing)\n",
+    "        motif_score, best_motif = score_motif_similarity(sd_candidate)\n",
+    "        purine_bonus = (region['purine_content'] - 0.6) * 2.0\n",
+    "        \n",
+    "\n",
+    "        combined_score = (\n",
+    "            spacing_score * 2.0 +    \n",
+    "            motif_score * 1.5 +      \n",
+    "            purine_bonus             \n",
+    "        )\n",
+    "        \n",
+    "        if combined_score > best_score:\n",
+    "            best_score = combined_score\n",
+    "            best_prediction = {\n",
+    "                'rbs_score': combined_score,\n",
+    "                'spacing_score': spacing_score,\n",
+    "                'motif_score': motif_score,\n",
+    "                'best_sequence': sd_candidate,\n",
+    "                'best_motif': best_motif,\n",
+    "                'spacing': spacing,\n",
+    "                'position': region['start'],\n",
+    "                'purine_content': region['purine_content'],\n",
+    "                'length': region['length']\n",
+    "            }\n",
+    "    \n",
+    "    return best_prediction or {\n",
+    "        'rbs_score': -5.0,\n",
+    "        'spacing_score': 0.0,\n",
+    "        'motif_score': 0.0,\n",
+    "        'best_sequence': None,\n",
+    "        'best_motif': None,\n",
+    "        'spacing': 0,\n",
+    "        'position': 0\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# =============================================================================\n",
+    "# ORF DETECTION\n",
+    "# =============================================================================\n",
+    "\n",
+    "def find_orfs_candidates(sequence: str, min_length: int = 100) -> List[Dict]:\n",
+    "    \"\"\"Detect all ORF candidates with dual coordinates and RBS scores.\"\"\"\n",
+    "    orfs = []\n",
+    "    \n",
+    "    sequences = [\n",
+    "        ('forward', sequence),\n",
+    "        ('reverse', str(Seq(sequence).reverse_complement()))\n",
+    "    ]\n",
+    "    seq_len = len(sequence)\n",
+    "\n",
+    "    print(\"Detecting ORFs and calculating RBS...\")\n",
+    "\n",
+    "    for strand_name, seq in sequences:\n",
+    "        for frame in range(3):\n",
+    "            active_starts = [] \n",
+    "            \n",
+    "            for i in range(frame, len(seq) - 2, 3):\n",
+    "                codon = seq[i:i+3]\n",
+    "                \n",
+    "                if len(codon) != 3:\n",
+    "                    break\n",
+    "                \n",
+    "                if codon in START_CODONS:\n",
+    "                    active_starts.append((i, codon))\n",
+    "                    \n",
+    "                elif codon in STOP_CODONS and active_starts:\n",
+    "                    for start_pos, start_codon in active_starts:\n",
+    "                        orf_length = i + 3 - start_pos\n",
+    "                        \n",
+    "                        if orf_length >= min_length:\n",
+    "                            # Create ORF with dual coordinates\n",
+    "                            if strand_name == 'forward':\n",
+    "                                orf = {\n",
+    "                                    'start': start_pos + 1,\n",
+    "                                    'end': i + 3,\n",
+    "                                    'genome_start': start_pos + 1,\n",
+    "                                    'genome_end': i + 3,\n",
+    "                                    'length': orf_length,\n",
+    "                                    'frame': frame,\n",
+    "                                    'strand': 'forward',\n",
+    "                                    'start_codon': start_codon,\n",
+    "                                    'sequence': seq[start_pos:i+3]\n",
+    "                                }\n",
+    "                            else:  # reverse strand\n",
+    "                                orf = {\n",
+    "                                    'start': start_pos + 1,\n",
+    "                                    'end': i + 3,\n",
+    "                                    'genome_start': seq_len - (i + 3) + 1,\n",
+    "                                    'genome_end': seq_len - start_pos,\n",
+    "                                    'length': orf_length,\n",
+    "                                    'frame': frame,\n",
+    "                                    'strand': 'reverse',\n",
+    "                                    'start_codon': start_codon,\n",
+    "                                    'sequence': seq[start_pos:i+3]\n",
+    "                                }\n",
+    "                            \n",
+    "                            # Calculate RBS for this ORF\n",
+    "                            rbs_result = predict_rbs_simple(seq, orf, upstream_length=20)\n",
+    "                            orf['rbs_score'] = rbs_result['rbs_score']\n",
+    "                            orf['rbs_motif'] = rbs_result.get('best_motif')\n",
+    "                            orf['rbs_spacing'] = rbs_result.get('spacing', 0)\n",
+    "                            orf['rbs_sequence'] = rbs_result.get('best_sequence')\n",
+    "                            \n",
+    "                            orfs.append(orf)\n",
+    "                    \n",
+    "                    active_starts = []\n",
+    "    \n",
+    "    print(f\"Complete: {len(orfs):,} ORFs detected with RBS scores\")\n",
+    "    return orfs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19fcdc30",
+   "metadata": {},
+   "source": [
+    "# NEW CODE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c2021e4c",
@@ -47,19 +285,14 @@
     "    if seq_len < min_length:\n",
     "        return purine_regions\n",
     "    \n",
-    "    # Pre-compute purine array\n",
     "    is_purine = [1 if base in 'AG' else 0 for base in sequence]\n",
     "    \n",
-    "    # CRITICAL: Match original iteration order!\n",
-    "    # Outer loop: iterate over START positions (like original)\n",
     "    for start in range(seq_len):\n",
     "        max_length = min(9, seq_len - start + 1)\n",
     "        \n",
-    "        # Initialize first window at this start position\n",
     "        if max_length > min_length:\n",
     "            purine_count = sum(is_purine[start:start + min_length])\n",
     "            \n",
-    "            # Check first length\n",
     "            length = min_length\n",
     "            if length <= seq_len - start:\n",
     "                purine_fraction = purine_count / length\n",
@@ -72,12 +305,10 @@
     "                        'length': length\n",
     "                    })\n",
     "            \n",
-    "            # Slide to longer lengths at this start position\n",
     "            for length in range(min_length + 1, max_length):\n",
     "                if start + length > seq_len:\n",
     "                    break\n",
     "                \n",
-    "                # Add one more base to the window\n",
     "                purine_count += is_purine[start + length - 1]\n",
     "                \n",
     "                purine_fraction = purine_count / length\n",
@@ -158,9 +389,9 @@
     "        elif 6 <= spacing <= 8:\n",
     "            spacing_score= 3.0  # Optimal\n",
     "        elif 5 <= spacing <= 10:\n",
-    "            spacing_score= 2.5  # Very good\n",
+    "            spacing_score= 2.5  # good\n",
     "        elif 4 <= spacing <= 12:\n",
-    "            spacing_score= 1.5  # Good\n",
+    "            spacing_score= 1.5  # ok\n",
     "        \n",
     "        motif_score, best_motif = score_motif_similarity_new(sd_candidate)\n",
     "        purine_bonus = (region['purine_content'] - 0.6) * 2.0\n",
@@ -204,13 +435,11 @@
     "def find_orfs_candidates_new(sequence: str, min_length: int = 100) -> List[Dict]:\n",
     "    \"\"\"Detect all ORF candidates with dual coordinates and RBS scores.\"\"\"\n",
     "    \n",
-    "    # Clear cache at start for new genome\n",
     "    if hasattr(score_motif_similarity_new, 'cache_clear'):\n",
     "        score_motif_similarity_new.cache_clear()\n",
     "    \n",
     "    orfs = []\n",
     "    \n",
-    "    # Pre-compute reverse complement\n",
     "    reverse_seq = str(Seq(sequence).reverse_complement())\n",
     "    \n",
     "    sequences = [\n",
@@ -281,6 +510,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "941894ab",
+   "metadata": {},
+   "source": [
+    "# ============================================================================\n",
+    "# SIMPLE COMPARISON: Original vs Optimized\n",
+    "# ============================================================================\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dd3c5d97",
@@ -295,14 +534,15 @@
       "================================================================================\n",
       "ORIGINAL VERSION\n",
       "================================================================================\n",
-      "Warm-up... Detecting ORFs and calculating RBS...\n"
+      "Warm-up... Detecting ORFs and calculating RBS...\n",
+      "Complete: 176,315 ORFs detected with RBS scores\n",
+      "done\n",
+      "\n",
+      "Run 1... Detecting ORFs and calculating RBS...\n"
      ]
     }
    ],
    "source": [
-    "# ============================================================================\n",
-    "# SIMPLE COMPARISON: Original vs Optimized\n",
-    "# ============================================================================\n",
     "\n",
     "from Bio import SeqIO\n",
     "import time\n",
