--- a/notebooks/orf_detection_optimized.ipynb
+++ b/notebooks/orf_detection_optimized.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "260022dc",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "54560b65",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "c2021e4c",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
     "    return purine_regions\n",
     "\n",
     "\n",
-    "@lru_cache(maxsize=10000)\n",
+    "@lru_cache(maxsize=100000)\n",
     "def score_motif_similarity_new(sequence: str) -> Tuple[float, str]:\n",
     "    \"\"\"Score sequence similarity to known RBS motifs.\"\"\"\n",
     "    best_score = 0.0\n",
@@ -538,46 +538,24 @@
       "================================================================================\n",
       "Genome: NC_000913.3\n",
       "================================================================================\n",
-      "Using cached: data\\full_dataset\\NC_000913.3.fasta\n",
+      "Using cached: c:\\Users\\User\\Desktop\\Bacterial Gene Prediction & Comparison Project\\data\\full_dataset\\NC_000913.3.fasta\n",
       "Sequence: 4,641,652 bp\n",
-      "[1/2] Testing NEW (optimized)... Detecting ORFs and calculating RBS...\n",
-      "Complete: 176,315 ORFs detected with RBS scores\n",
-      "24.60s - 176,315 ORFs\n",
       "\n",
-      "[2/2] Testing OLD (baseline)... Detecting ORFs and calculating RBS...\n",
-      "Complete: 176,315 ORFs detected with RBS scores\n",
-      "90.53s - 176,315 ORFs\n",
-      "\n",
-      "Results match: YES\n",
-      "Time saved: -65.93s (-268.0%)\n",
-      "\n",
-      "================================================================================\n",
-      "Genome: NC_000964.3\n",
-      "================================================================================\n",
-      "Using cached: data\\full_dataset\\NC_000964.3.fasta\n",
-      "Sequence: 4,215,606 bp\n",
-      "[1/2] Testing NEW (optimized)... Detecting ORFs and calculating RBS...\n",
-      "Complete: 139,046 ORFs detected with RBS scores\n",
-      "15.50s - 139,046 ORFs\n",
-      "\n",
-      "[2/2] Testing OLD (baseline)... Detecting ORFs and calculating RBS...\n",
-      "Complete: 139,046 ORFs detected with RBS scores\n",
-      "50.94s - 139,046 ORFs\n",
-      "\n",
-      "Results match: YES\n",
-      "Time saved: -35.44s (-228.6%)\n",
-      "\n",
-      "================================================================================\n",
-      "Genome: NC_003197.2\n",
-      "================================================================================\n",
-      "Downloading NC_003197.2 from NCBI...\n",
-      "  Downloaded: 4,996,334 bytes\n",
-      "Sequence: 4,857,450 bp\n",
-      "[1/2] Testing NEW (optimized)... Detecting ORFs and calculating RBS...\n",
-      "Complete: 173,564 ORFs detected with RBS scores\n",
-      "17.65s - 173,564 ORFs\n",
-      "\n",
-      "[2/2] Testing OLD (baseline)... Detecting ORFs and calculating RBS...\n"
+      "[1/2] Testing OLD (baseline)... Detecting ORFs and calculating RBS...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 106\u001b[0m\n\u001b[0;32m    104\u001b[0m gc\u001b[38;5;241m.\u001b[39mcollect()\n\u001b[0;32m    105\u001b[0m start \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[1;32m--> 106\u001b[0m orfs_old \u001b[38;5;241m=\u001b[39m \u001b[43mfind_orfs_candidates\u001b[49m\u001b[43m(\u001b[49m\u001b[43msequence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    107\u001b[0m time_old \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter() \u001b[38;5;241m-\u001b[39m start\n\u001b[0;32m    108\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime_old\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124ms - \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(orfs_old)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ORFs\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\User\\Desktop\\Bacterial Gene Prediction & Comparison Project\\notebooks\\..\\src\\traditional_methods.py:257\u001b[0m, in \u001b[0;36mfind_orfs_candidates\u001b[1;34m(sequence, min_length)\u001b[0m\n\u001b[0;32m    244\u001b[0m     orf \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m    245\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart\u001b[39m\u001b[38;5;124m'\u001b[39m: start_pos \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m    246\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mend\u001b[39m\u001b[38;5;124m'\u001b[39m: i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m3\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    253\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msequence\u001b[39m\u001b[38;5;124m'\u001b[39m: seq[start_pos:i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m3\u001b[39m]\n\u001b[0;32m    254\u001b[0m     }\n\u001b[0;32m    256\u001b[0m \u001b[38;5;66;03m# Calculate RBS for this ORF\u001b[39;00m\n\u001b[1;32m--> 257\u001b[0m rbs_result \u001b[38;5;241m=\u001b[39m \u001b[43mpredict_rbs_simple\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mupstream_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    258\u001b[0m orf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrbs_score\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m rbs_result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrbs_score\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m    259\u001b[0m orf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrbs_motif\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m rbs_result\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbest_motif\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\User\\Desktop\\Bacterial Gene Prediction & Comparison Project\\notebooks\\..\\src\\traditional_methods.py:137\u001b[0m, in \u001b[0;36mpredict_rbs_simple\u001b[1;34m(sequence, orf, upstream_length)\u001b[0m\n\u001b[0;32m    134\u001b[0m upstream_start \u001b[38;5;241m=\u001b[39m start_pos \u001b[38;5;241m-\u001b[39m upstream_length\n\u001b[0;32m    135\u001b[0m upstream_seq \u001b[38;5;241m=\u001b[39m sequence[upstream_start:start_pos]\n\u001b[1;32m--> 137\u001b[0m purine_regions \u001b[38;5;241m=\u001b[39m \u001b[43mfind_purine_rich_regions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mupstream_seq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_purine_content\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    139\u001b[0m best_score \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5.0\u001b[39m\n\u001b[0;32m    140\u001b[0m best_prediction \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\User\\Desktop\\Bacterial Gene Prediction & Comparison Project\\notebooks\\..\\src\\traditional_methods.py:75\u001b[0m, in \u001b[0;36mfind_purine_rich_regions\u001b[1;34m(sequence, min_length, min_purine_content)\u001b[0m\n\u001b[0;32m     73\u001b[0m             purine_fraction \u001b[38;5;241m=\u001b[39m purine_count \u001b[38;5;241m/\u001b[39m length\n\u001b[0;32m     74\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m purine_fraction \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m min_purine_content:\n\u001b[1;32m---> 75\u001b[0m                 purine_regions\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     76\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msequence\u001b[39m\u001b[38;5;124m'\u001b[39m: sequence[start:start \u001b[38;5;241m+\u001b[39m length],\n\u001b[0;32m     77\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart\u001b[39m\u001b[38;5;124m'\u001b[39m: start,\n\u001b[0;32m     78\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mend\u001b[39m\u001b[38;5;124m'\u001b[39m: start \u001b[38;5;241m+\u001b[39m length,\n\u001b[0;32m     79\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpurine_content\u001b[39m\u001b[38;5;124m'\u001b[39m: purine_fraction,\n\u001b[0;32m     80\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlength\u001b[39m\u001b[38;5;124m'\u001b[39m: length\n\u001b[0;32m     81\u001b[0m                 })\n\u001b[0;32m     83\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m purine_regions\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -609,9 +587,15 @@
     "print(f\"Testing {len(TEST_GENOMES)} genomes\")\n",
     "print(\"Comparing: OLD (baseline) vs NEW (optimized)\\n\")\n",
     "\n",
-    "# Ensure data directory exists\n",
-    "data_dir = Path('data/full_dataset')\n",
-    "data_dir.mkdir(parents=True, exist_ok=True)\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "# Add project root to path\n",
+    "project_root = Path.cwd().parent  # Go up to project root\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "# Now use paths relative to project root\n",
+    "data_dir = project_root / 'data' / 'full_dataset'\n",
     "\n",
     "results = []\n",
     "\n",
